--- a/examples/loader/package.json
+++ b/examples/loader/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "isoq src/index.jsx && serve-fetch node_modules/__ISOQ_MIDDLEWARE/isoq-request-handler.js"
+    "start": "isoq --sourcemap src/index.jsx && serve-fetch node_modules/__ISOQ_MIDDLEWARE/isoq-request-handler.js"
   },
   "dependencies": {
     "isoq": "^1.0.18",
