--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "main": "src/main/main.jsx",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "isoq": "^1.0.18"
+  }
 }
