--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "isoq-router",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "scripts": {},
   "license": "MIT",
   "main": "src/main/main.jsx",
   "type": "module",
   "dependencies": {
-    "isoq": "^1.0.18"
+    "isoq": "^1.0.19"
   }
 }
