--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "isoq-router",
-  "version": "1.0.9",
+  "version": "1.0.12",
   "scripts": {},
   "license": "MIT",
   "main": "src/main/main.jsx",
   "type": "module",
   "dependencies": {
-    "isoq": "^1.1.8"
+    "isoq": "^1.1.11",
+    "url-join": "^5.0.0"
   }
 }
